--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.11.16
 django-admin==1.3.2
 django-excel-response2==2.0.8
 django-six==1.0.4
+djangorestframework==3.9.1
 pytz==2018.9
 screen==1.0.1
 xlwt==1.3.0
